--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ before_install:
 - sudo sh -c 'echo "deb http://cran.rstudio.com/bin/linux/ubuntu trusty/" >> /etc/apt/sources.list'
 - gpg --keyserver keyserver.ubuntu.com --recv-key E084DAB9
 - gpg -a --export E084DAB9 | sudo apt-key add -
-- sudo apt-get update -qq
-- sudo apt-get install r-base -qq
+- sudo apt-get update -qq > /dev/null
+- sudo apt-get install r-base -qq > /dev/null
 # Install packages
-- sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq
-- sudo R --vanilla -e 'install.packages(c("Rserve", "miniCRAN"), repos="http://cran.us.r-project.org")'
+- sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq > /dev/null
+- sudo R --vanilla -e 'install.packages(c("Rserve", "miniCRAN", "ggplot2"), repos="http://cran.us.r-project.org", Ncpus=2)' > /dev/null
 
 # If build succeeds upload test coverage report
 after_success:
