--- a/de.bund.bfr.knime.update/pom.xml
+++ b/de.bund.bfr.knime.update/pom.xml
@@ -1,10 +1,10 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>de.bund.bfr.knime</groupId>
-        <artifactId>de.bund.bfr.knime.releng</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>de.bund.bfr.knime</groupId>
+		<artifactId>de.bund.bfr.knime.root</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
     <artifactId>de.bund.bfr.knime.update</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>eclipse-repository</packaging>
