--- a/de.bund.bfr.knime.pmm.nodes/build.properties
+++ b/de.bund.bfr.knime.pmm.nodes/build.properties
@@ -1,6 +1,5 @@
 javacDefaultEncoding.. = UTF-8
 bin.includes = plugin.xml,\
-               library.jar,\
                js-src/,\
                META-INF/,\
                js-lib/,\
@@ -8,5 +7,9 @@ bin.includes = plugin.xml,\
                jcalendar-1.4.jar,\
                nashorn.jar,\
                metanode_templates/,\
-               fskml-0.0.1-SNAPSHOT.jar
-source.library.jar = src/, test/
+               fskml-0.0.1-SNAPSHOT.jar,\
+               .
+jars.compile.order = .
+source.. = src/
+output.. = bin/
+source.. = src/
