--- a/de.bund.bfr.knime.fsklab.metadata.model/.classpath
+++ b/de.bund.bfr.knime.fsklab.metadata.model/.classpath
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src">
+		<attributes>
+			<attribute name="ignore_optional_problems" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="fix_src"/>
 	<classpathentry kind="src" path="resources"/>
+	<classpathentry exported="true" kind="lib" path="libs/threetenbp-1.3.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/swagger-annotations-1.5.15.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="libs/emfjson-jackson-1.0.0-rc.1.jar"/>
