--- a/de.bund.bfr.knime.fsklab.metadata.model/build.properties
+++ b/de.bund.bfr.knime.fsklab.metadata.model/build.properties
@@ -6,7 +6,9 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                generatedviews/,\
-               libs/emfjson-jackson-1.0.0-rc.1.jar
+               libs/emfjson-jackson-1.0.0-rc.1.jar,\
+               libs/swagger-annotations-1.5.15.jar,\
+               libs/threetenbp-1.3.5.jar
 jars.compile.order = .
 source.. = src/,\
            fix_src/,\
