--- a/de.bund.bfr.knime.fsklab.metadata.model/.classpath
+++ b/de.bund.bfr.knime.fsklab.metadata.model/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry exported="true" kind="lib" path="libs/threetenbp-1.3.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/swagger-annotations-1.5.15.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-datatype-threetenbp-2.8.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="libs/emfjson-jackson-1.0.0-rc.1.jar"/>
