--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
 jdk:
+  - oraclejdk7
   - oraclejdk8
   
 script: xvfb-run mvn verify -B -Pjacoco
@@ -20,7 +21,9 @@ before_install:
 # Install packages
 - sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq > /dev/null
 - sudo R --vanilla -e 'install.packages(c("Rserve", "miniCRAN", "ggplot2", "svglite"), repos="http://cran.us.r-project.org", Ncpus=2)' > /dev/null
-
+- export JAVA7_HOME=/usr/lib/jvm/java-7-oracle
+- export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
+- export JAVA_HOME=$JAVA7_HOME
 # If build succeeds upload test coverage report
 after_success:
 - pushd $TRAVIS_BUILD_DIR/de.bund.bfr.knime.testreport/target/site/jacoco-aggregate
