--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,11 @@ cache:
 before_install:
 # Install R 3.2 instead of R 3.0 from base Ubuntu
 - sudo sh -c 'echo "deb http://cran.rstudio.com/bin/linux/ubuntu trusty/" >> /etc/apt/sources.list'
-- gpg --keyserver keyserver.ubuntu.com --recv-key E084DAB9
-- gpg -a --export E084DAB9 | sudo apt-key add -
-- sudo apt-get update -qq > /dev/null
-- sudo apt-get --allow-unauthenticated install r-base -qq > /dev/null
+- sudo apt-get --allow-unauthenticated update -qq
+- sudo apt-get --allow-unauthenticated install r-base -qq
 # Install packages
-- sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq > /dev/null
-- sudo R --vanilla -e 'install.packages(c("Rserve", "miniCRAN", "ggplot2", "svglite"), repos="http://cran.us.r-project.org", Ncpus=2)' > /dev/null
+- sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq
+- sudo R --vanilla -e 'install.packages(c("Rserve", "miniCRAN", "ggplot2", "svglite"), repos="http://cran.us.r-project.org", Ncpus=2)'
 
 # If build succeeds upload test coverage report
 after_success:
