--- a/de.bund.bfr.knime.fsklab.preferences/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.preferences/plugin.xml
@@ -3,17 +3,17 @@
 <plugin>
 
    <!-- Preference initializer for custom R -->
-   <extension id="de.bund.bfr.knime.pmm.fskx.bin.preferences.RPreferenceInitializer"
+   <extension id="de.bund.bfr.knime.pmm.fskx.bin.preferences.PreferenceInitializer"
      point="org.eclipse.core.runtime.preferences">
-     <initializer class="de.bund.bfr.knime.fsklab.preferences.RPreferenceInitializer" />
+     <initializer class="de.bund.bfr.knime.fsklab.preferences.PreferenceInitializer" />
    </extension>
   
    <!-- Preference page for custom R -->
    <extension point="org.eclipse.ui.preferencePages">
      <page category="org.knime.workbench.ui.preferences"
-       class="de.bund.bfr.knime.fsklab.preferences.RPreferencePage"
-       id="de.bund.bfr.knime.fsklab.nodes.preferences.RPreferencePage"
-       name="FSK-Lab settings" />
+       class="de.bund.bfr.knime.fsklab.preferences.PreferencePage"
+       id="de.bund.bfr.knime.fsklab.nodes.preferences.PreferencePage"
+       name="FSK-Lab" />
    </extension>
    
 </plugin>
