--- a/de.bund.bfr.knime.testreport/pom.xml
+++ b/de.bund.bfr.knime.testreport/pom.xml
@@ -113,6 +113,12 @@
 		</dependency>
 		<dependency>
 			<groupId>de.bund.bfr.knime</groupId>
+			<artifactId>de.bund.bfr.knime.pmm.common.tests</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.bund.bfr.knime</groupId>
 			<artifactId>de.bund.bfr.knime.tests</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>test</scope>
