--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -105,9 +105,11 @@
        <importResource relativePath="nodes/miguel_editor.js" type="JAVASCRIPT" />
        <importResource relativePath="nodes/miguel_editor_data.js" type="JAVASCRIPT" />
        <importResource relativePath="nodes/miguel_editor.css" type="CSS" />
+       <importResource relativePath="nodes/ControlledVocabulary.js" type="JAVASCRIPT" />
 
        <webDependency webResourceBundleID="codemirror"></webDependency>
        <webDependency webResourceBundleID="bootstrap_3.3.6"></webDependency>
+       <webDependency webResourceBundleID="bootstrap3_typeahead_4.0.2"></webDependency>
      </webResourceBundle>
      
      <!-- JS and CSS code for Fsk Joiner node -->
@@ -320,17 +322,16 @@
       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/react/react-dom.min.js" type="JAVASCRIPT" />      
     </webResourceBundle>
     
-    <webResourceBundle debug="false" name="bootstrap4" usesDefine="true" version="4.3.1" webResourceBundleID="bootstrap_4.3.1">
-       <webResource relativePathSource="js-src/bootstrap-4.3.1/" relativePathTarget="js-src/bootstrap-4.3.1/"></webResource>
-       <importResource relativePath="js-src/bootstrap-4.3.1/bootstrap.bundle.min.js" type="JAVASCRIPT" />
-       <importResource relativePath="js-src/bootstrap-4.3.1/bootstrap.min.css" type="CSS" />
-    </webResourceBundle>
-    
     <webResourceBundle debug="false" name="codemirror" usesDefine="true" version="" webResourceBundleID="codemirror">    
-      <webResource relativePathSource="js-src/codemirror/" relativePathTarget="codemirror"></webResource>
+      <webResource relativePathSource="js-lib/codemirror/" relativePathTarget="codemirror"></webResource>
 	  <importResource relativePath="codemirror/codemirror.js" type="JAVASCRIPT" />
 	  <importResource relativePath="codemirror/codemirror.css" type="CSS" />
 	  <importResource relativePath="codemirror/r.js" type="JAVASCRIPT" />
+    </webResourceBundle>
+    
+    <webResourceBundle debug="false" name="Bootstrap 3 Typeahead" usesDefine="false" version="4.0.2" webResourceBundleID="bootstrap3_typeahead_4.0.2">
+      <webResource relativePathSource="js-lib/bootstrap3_typeahead" relativePathTarget="bootstrap3_typeahead" />
+      <importResource relativePath="bootstrap3_typeahead/bootstrap3-typeahead.min.js" type="JAVASCRIPT" />
     </webResourceBundle>
   </extension>
 </plugin>
