Test build on Travis

--- a/de.bund.bfr.knime.update/.project
+++ b/de.bund.bfr.knime.update/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.bund.bfr.knime.update.unix</name>
+	<name>de.bund.bfr.knime.update</name>
 	<comment></comment>
 	<projects>
 	</projects>
