--- a/features/de.bund.bfr.bundles.feature/.project
+++ b/features/de.bund.bfr.bundles.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.bund.bfr.bundles</name>
+	<name>de.bund.bfr.bundles.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
