Add missing JS libraries to binary

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -14,7 +14,8 @@ bin.includes = META-INF/,\
                libs/batik-svg-dom.jar,\
                libs/batik-util-1.7.jar,\
                js-src/,\
-               libs/togglz-core-2.6.1.Final.jar
+               libs/togglz-core-2.6.1.Final.jar,\
+               js-lib/
 source.. = src/,\
            resources/
            output.. = bin/
