Fix bundles in build

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -16,7 +16,8 @@
         <module>de.bund.bfr.knime.fsklab.legacy.feature</module>
         <module>de.bund.bfr.knime.internal.feature</module>
         <module>de.bund.bfr.knime.pmm.feature</module>
-        <module>de.bund.bfr.bundles.feature</module>
+        <module>de.bund.bfr.knime.r.x64.feature</module>
+        <module>de.bund.bfr.knime.r.x86.feature</module>
     </modules>
 </project>
 
