--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -309,6 +309,7 @@
 	  <importResource relativePath="codemirror/codemirror.js" type="JAVASCRIPT" />
 	  <importResource relativePath="codemirror/codemirror.css" type="CSS" />
 	  <importResource relativePath="codemirror/r.js" type="JAVASCRIPT" />
+	  <importResource relativePath="codemirror/markdown.js" type="JAVASCRIPT" />
     </webResourceBundle>
     
     <webResourceBundle debug="false" name="Bootstrap 3 Typeahead" usesDefine="false" version="4.0.2" webResourceBundleID="bootstrap3_typeahead_4.0.2">
