--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -304,12 +304,12 @@
       <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/joiner/react/react-dom.min.js" type="JAVASCRIPT" />      
     </webResourceBundle>
     
-    <webResourceBundle debug="false" name="codemirror" usesDefine="true" version="" webResourceBundleID="codemirror">    
+    <webResourceBundle debug="false" name="codemirror" usesDefine="true" version="5.49.2" webResourceBundleID="codemirror">    
       <webResource relativePathSource="js-lib/codemirror/" relativePathTarget="codemirror"></webResource>
 	  <importResource relativePath="codemirror/codemirror.js" type="JAVASCRIPT" />
 	  <importResource relativePath="codemirror/codemirror.css" type="CSS" />
-	  <importResource relativePath="codemirror/r.js" type="JAVASCRIPT" />
-	  <importResource relativePath="codemirror/markdown.js" type="JAVASCRIPT" />
+	  <!-- <importResource relativePath="codemirror/r.js" type="JAVASCRIPT" /> -->
+	  <!-- <importResource relativePath="codemirror/markdown.js" type="JAVASCRIPT" /> -->
     </webResourceBundle>
     
     <webResourceBundle debug="false" name="Bootstrap 3 Typeahead" usesDefine="false" version="4.0.2" webResourceBundleID="bootstrap3_typeahead_4.0.2">
