--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -148,9 +148,8 @@
 	   <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/newjoiner/joiner.css" type="CSS" />
 	   <importResource relativePath="js-src/de/bund/bfr/knime/fsklab/nodes/newjoiner/joiner.js" type="JAVASCRIPT" />
 	   
-	   <webDependency webResourceBundleID="jQuery_3.3.1" />
-	   <webDependency webResourceBundleID="Lodash_4.17.15" />
-	   <webDependency webResourceBundleID="backbone_1.4.0" />
+	   <webDependency webResourceBundleID="JointJS_3.1.1" />
+	   <webDependency webResourceBundleID="bootstrap_3.3.6" />
 	 </webResourceBundle>
 	 
 	 <!-- JS and CSS code for Fsk Editor JS node -->
@@ -197,7 +196,7 @@
     
     <webResourceBundle debug="false" name="lodash" version="4.17.15" webResourceBundleID="Lodash_4.17.15">
       <webResource relativePathSource="js-lib/lodash/4.17.15" relativePathTarget="js-lib/lodash/4.17.15" />
-      <importResource relativePath="js-lib/lodash/4.17.15/core.min.js" type="JAVASCRIPT" />
+      <importResource relativePath="js-lib/lodash/4.17.15/lodash.min.js" type="JAVASCRIPT" />
     </webResourceBundle>
     
     <webResourceBundle debug="false" name="underscore" version="1.9.1" webResourceBundleID="underscore_1.9.1">
@@ -210,6 +209,15 @@
       <importResource relativePath="js-lib/backbone/1.4.0/backbone-min.js" type="JAVASCRIPT" />
       <webDependency webResourceBundleID="underscore_1.9.1" />
     </webResourceBundle>
+    
+    <webResourceBundle debug="false" name="JointJS" version="3.1.1" webResourceBundleID="JointJS_3.1.1">
+      <webResource relativePathSource="js-lib/jointjs/3.1.1" relativePathTarget="js-lib/jointjs/3.1.1" />
+      <importResource relativePath="js-lib/jointjs/3.1.1/joint.min.css" type="CSS" />
+      <importResource relativePath="js-lib/jointjs/3.1.1/joint.min.js" type="JAVASCRIPT" />
+      <webDependency webResourceBundleID="jQuery_3.3.1" />
+	  <webDependency webResourceBundleID="backbone_1.4.0" />
+	  <webDependency webResourceBundleID="Lodash_4.17.15" />
+    </webResourceBundle> 
     
     <webResourceBundle debug="true" name="Jointjscss" version="1.0.0"
       webResourceBundleID="de.bund.bfr.knime.fsklab.nodes.joiner.jointjscss">
