--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -103,9 +103,7 @@
        <!-- JS and CSS code -->
        <webResource relativePathSource="js-src/de/bund/bfr/knime/fsklab/nodes/neweditor" relativePathTarget="neweditor" />
        <importResource relativePath="neweditor/editor.js" type="JAVASCRIPT" />
-       <importResource relativePath="neweditor/editor_data.js" type="JAVASCRIPT" />
        <importResource relativePath="neweditor/editor.css" type="CSS" />
-       <importResource relativePath="neweditor/ControlledVocabulary.js" type="JAVASCRIPT" />
 
        <webDependency webResourceBundleID="codemirror"></webDependency>
        <webDependency webResourceBundleID="bootstrap_3.3.6"></webDependency>
@@ -113,6 +111,10 @@
        <webDependency webResourceBundleID="datepicker"></webDependency>
        <webDependency webResourceBundleID="RequireJS_2.3.3"></webDependency>
        <webDependency webResourceBundleID="knimeserviceConditionalLoad_1.0"></webDependency>
+       
+       <!-- FSK dependencies -->
+       <webDependency webResourceBundleID="ControlledVocabularies_1.0.0"></webDependency>
+       <webDependency webResourceBundleID="FskMetadata_1.0.0"></webDependency>
        
      </webResourceBundle>
      
@@ -350,6 +352,44 @@
       <webResource relativePathSource="js-lib/datepicker" relativePathTarget="datepicker" />
       <importResource relativePath="datepicker/bootstrap-datepicker.min.js" type="JAVASCRIPT" />
     </webResourceBundle>
+    
+    <webResourceBundle
+    	debug="true"
+    	exports="cv"
+    	name="Controlled vocabularies"
+    	usesDefine="false"
+    	version="1.0.0"
+    	webResourceBundleID="ControlledVocabularies_1.0.0">
+    	
+    	<webResource
+    		relativePathSource="js-lib/bfr/controlled_vocabularies_1.0.0.js"
+    		relativePathTarget="js-lib/bfr/controlled_vocabularies_1.0.0.js">
+    	</webResource>
+    	
+    	<importResource
+    		relativePath="js-lib/bfr/controlled_vocabularies_1.0.0.js"
+    		type="JAVASCRIPT">
+    	</importResource>
+    </webResourceBundle>
+
+	<webResourceBundle
+		debug="true"
+		exports="fskui"
+		name="FSK UI Metadata schema"
+		usesDefine="false"
+		version="1.0.0"
+		webResourceBundleID="FskMetadata_1.0.0">
+		
+		<webResource
+			relativePathSource="js-lib/bfr/fskmetadata_1.0.0.js"
+			relativePathTarget="js-lib/bfr/fskmetadata_1.0.0.js">
+		</webResource>
+		
+		<importResource
+			relativePath="js-lib/bfr/fskmetadata_1.0.0.js"
+			type="JAVASCRIPT">
+		</importResource>
+	</webResourceBundle>
 
   </extension>
 </plugin>
