--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -115,6 +115,7 @@
        <!-- FSK dependencies -->
        <webDependency webResourceBundleID="ControlledVocabularies_1.0.0"></webDependency>
        <webDependency webResourceBundleID="FskMetadata_1.0.0"></webDependency>
+       <webDependency webResourceBundleID="FskUtil_1.0.0"></webDependency>
        
      </webResourceBundle>
      
@@ -387,6 +388,25 @@
 		
 		<importResource
 			relativePath="js-lib/bfr/fskmetadata_1.0.0.js"
+			type="JAVASCRIPT">
+		</importResource>
+	</webResourceBundle>
+	
+	<webResourceBundle
+		debug="true"
+		exports="fskutil"
+		name="FSK JS utilities"
+		usesDefine="false"
+		version="1.0.0"
+		webResourceBundleID="FskUtil_1.0.0">
+		
+		<webResource
+			relativePathSource="js-lib/bfr/fskutil_1.0.0.js"
+			relativePathTarget="js-lib/bfr/fskutil_1.0.0.js">
+		</webResource>
+		
+		<importResource
+			relativePath="js-lib/bfr/fskutil_1.0.0.js"
 			type="JAVASCRIPT">
 		</importResource>
 	</webResourceBundle>
