--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -129,6 +129,9 @@
 	   <webDependency webResourceBundleID="JointJS_3.1.1" />
 	   <webDependency webResourceBundleID="bootstrap_3.3.6" />
        <webDependency webResourceBundleID="bootstrap3_typeahead_4.0.2" />
+       <webDependency webResourceBundleID="codemirror"></webDependency>
+       <webDependency webResourceBundleID="RequireJS_2.3.3"></webDependency>
+       <webDependency webResourceBundleID="knimeserviceConditionalLoad_1.0"></webDependency>
 	   
 	   <webDependency webResourceBundleID="ControlledVocabularies_1.0.0" />
 	   <webDependency webResourceBundleID="FskMetadata_1.0.0" />
