--- a/de.bund.bfr.knime.fsklab.nodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes/plugin.xml
@@ -2,8 +2,29 @@
 <?eclipse version="3.4"?>
 <plugin>
 
-  <!-- Splash extension to be shown when launching KNIME -->
-
+  <extension point="org.knime.core.PortType">
+  
+    <portType
+      color="000000"
+      hidden="false"
+      name="FSK object"
+      objectClass="de.bund.bfr.knime.fsklab.FskPortObject"
+      objectSerializer="de.bund.bfr.knime.fsklab.FskPortObject$Serializer"
+      specClass="de.bund.bfr.knime.fsklab.FskPortObjectSpec"
+      specSerializer="de.bund.bfr.knime.fsklab.FskPortObjectSpec$Serializer">
+    </portType>
+    
+    <portType
+      color="FF4500"
+      hidden="false"
+      name="Combined FSK object"
+      objectClass="de.bund.bfr.knime.fsklab.CombinedFskPortObject"
+      objectSerializer="de.bund.bfr.knime.fsklab.CombinedFskPortObject$Serializer"
+      specClass="de.bund.bfr.knime.fsklab.CombinedFskPortObjectSpec"
+      specSerializer="de.bund.bfr.knime.fsklab.CombinedFskPortObjectSpec$Serializer">
+    </portType>
+  </extension>
+    
   <!-- Category for FSK nodes -->
   <extension point="org.knime.workbench.repository.categories">
     <category icon="icons/fsk48.png" level-id="fsklab" name="FSK-Lab" path="/" />
