--- a/de.bund.bfr.knime.fsklab.nodes.deprecated2/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated2/plugin.xml
@@ -2,6 +2,18 @@
 <?eclipse version="3.4"?>
 <plugin>
 
+  <extension point="org.knime.core.PortType">
+ 	<!-- FSK port object -->
+    <portType
+      color="588C7E"
+      hidden="false"
+      name="FSK object"
+	  objectClass="de.bund.bfr.knime.fsklab.nodes.port.FskPortObject"
+	  objectSerializer="de.bund.bfr.knime.fsklab.nodes.port.FskPortObject$Serializer"
+	  specClass="de.bund.bfr.knime.fsklab.nodes.port.FskPortObjectSpec"
+	  specSerializer="de.bund.bfr.knime.fsklab.nodes.port.FskPortObjectSpec$Serializer"/>
+  </extension>
+
   <!-- Category for legacy FSK nodes -->
   <extension point="org.knime.workbench.repository.categories">
     <category icon="icons/fsk48.png" level-id="legacy" name="Legacy" path="/fsklab" />
