--- a/de.bund.bfr.knime.fsklab.nodes.deprecated/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated/plugin.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+
+  <extension point="org.knime.core.PortType">
+	<!-- Deprecated: FSK port object for deprecated nodes-->
+    <portType
+      color="588C7E"
+      hidden="false"
+      name="FSK object"
+	  objectClass="de.bund.bfr.knime.pmm.fskx.port.FskPortObject"
+	  objectSerializer="de.bund.bfr.knime.pmm.fskx.port.FskPortObject$Serializer"
+	  specClass="de.bund.bfr.knime.pmm.fskx.port.FskPortObjectSpec"
+	  specSerializer="de.bund.bfr.knime.pmm.fskx.port.FskPortObjectSpec$Serializer" />
+  </extension>
+
   <extension point="org.knime.workbench.repository.nodes">
     <!-- Deprecated nodes -->
     <node category-path="/fsklab" deprecated="true" factory-class="de.bund.bfr.knime.fsklab.nodes.reader.FskxReaderNodeFactory" />
